# 42sh

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac
docs/: DEV.md  Makefile.am  USER.md
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h  ast_aux.h  ast_free.c  ast_init.c  ast_run.c
src/built-in/: b_bool.c  echo.c
src/builtin/: Makefile.am  break_continue.c  break_continue.h  cd.c  cd.h  dot.c  dot.h  echo.c  echo.h  exit.c  exit.h  export.c  export.h  unset.c  unset.h
src/exec/: Makefile.am  exec.c  exec.h  redir_exec.c  redir_exec.h
src/expand/: Makefile.am  expand.c  expand.h  hashmap.c  hashmap.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: .lexer.c.swp  Makefile.am  lexer.c  lexer.h  lexer_aux.h  lexer_handlers.c  lexer_operators.c  lexer_tokens.c  lexer_utils.c
src/parser/: Makefile.am  parser.c  parser.h  parser_aux.h  parser_commands.c  parser_lists.c  parser_pipelines.c  parser_redirections.c  parser_rules.c  parser_utils.c
src/utils/: Makefile.am  hash.c  hash.h  itoa.c  itoa.h  prettyprint.c  prettyprint.h  redir.c  redir.h  token.c  token.h
tests/: tests.sh
tests/test_files/: and_or.sh  backslash.sh  break_continue.sh  cd.sh  command_blocks.sh  command_lists_semicolons.sh  comments.sh  dot.sh  dot_test_helper1.sh  dot_test_helper2.sh  dot_test_helper3.sh  dot_test_helper4.sh  dot_test_helper5.sh  dot_test_helper6.sh  echo_corner_case.sh  exit.sh  expansion.sh  export.sh  function.sh  grammar.sh  if_elif_else.sh  loop.sh  many_lines.sh  negation.sh  new_line_cp_list.sh  pipe.sh  prettyprint.sh  redirection.sh  simple_commands.sh  single_quotes.sh  stress_tests.sh  test10.sh  test5.sh  test7.sh  test8.sh  test_elif_without_then.sh  test_empty_then.sh  test_if_elif_else.sh  test_limite_else.sh  test_mix_echo_if.sh  (+5 more)
tests/tests_files/: tests1.sh
tests/tests_unitaires/: tests.c
(+1056 files in other folders)
